fixed problem slider on safari

--- a/src/app/questionnaire/questionnaire.component.scss
+++ b/src/app/questionnaire/questionnaire.component.scss
@@ -138,7 +138,7 @@ div.container p {
 }
 
 .scoring-filler::-webkit-slider-thumb { //filler
-    box-shadow: 1000px 0 0 1000px $nav-color;
+    box-shadow: 1000px 0 0 0 $nav-color;
     width: 0;
     height: 0;
 }
@@ -153,7 +153,7 @@ div.container p {
     background: white;
 }
 
-.scoring-filler[type='range']::-webkit-slider-thumb {
+.scoring-filler[type=range]::-webkit-slider-thumb {
     box-shadow: 1000px 0 0 1000px $nav-color;
 }
 
